force-app/main/default/objects/Booking_Photo__c/Booking_Photo__c.object-meta.xml
<CustomObject>
    <label>Booking Photo</label>
    <nameField>
        <label>Booking Photo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Booking Photos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>