force-app/main/default/objects/Booking_Photo__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Booking Photos</relationshipLabel>
    <relationshipName>Booking_Photos</relationshipName>
    <type>Lookup</type>
</CustomField>