force-app/main/default/objects/Booking_Photo__c/fields/File_Type__c.field-meta.xml
<CustomField>
    <fullName>File_Type__c</fullName>
    <label>File Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>